# test_logging

./: CMakeLists.txt  CMakeLists.txt.user.UITaLw  main.cpp  utils.cpp  utils.hpp
docker/: .env  2  Dockerfile  compose.yaml
docker/conf/fluent-bit/: conf  parsers.conf
docker/conf/fluentd/: conf  sql_state
docker/conf/ld/: my_ld.conf
docker/conf/logstash/: pipeline.conf  pipelines.yml
docker/scripts/fluentdservice/: run
docker/scripts/logstash/: run
docker/scripts/service/: run
docker/scripts/sql/: sql_script1.sql
